--- a/generateApp/admin_app/views/login.ejs
+++ b/generateApp/admin_app/views/login.ejs
@@ -32,10 +32,10 @@
 
 <body>
     <div class="min-h-80 p-0 p-sm-6 d-flex align-items-stretch">
-        <div class="card w-25x flex-grow-1 flex-sm-grow-0 m-sm-auto bg-success">
+        <div class="card w-25x flex-grow-1 flex-sm-grow-0 m-sm-auto" style="background-color: #1d3a35;">
             <form class="card-body p-sm-5 m-sm-3 flex-grow-0" method="post">
               <div class="d-flex justify-content-center">
-                <img class="mb-5" src="/assets/images/logo.png" alt="" width="150">
+                <img class="mb-5" src="/assets/images/logo1.png" alt="" width="280">
               </div>
 
                 <h1 class="mb-0 fs-3 text-white">S'identifier</h1>
