add header/footer category

--- a/generateApp/client_app/views/layout/header.ejs
+++ b/generateApp/client_app/views/layout/header.ejs
@@ -164,13 +164,14 @@
 				<!-- responsive-nav -->
 				<div id="responsive-nav">
 					<!-- NAV -->
-					<ul class="main-nav nav navbar-nav">
+					<ul class="main-nav nav navbar-nav" >
 						<li class="active"><a href="/">Accueil</a></li>
 						<li><a href="/products/list/1">Nos produits</a></li>
-						<li><a href="#">Literies </a></li>
-						<li><a href="#">Rideaux</a></li>
-						<li><a href="#">Décoration de chambre </a></li>
-						<li><a href="#">Ligne de maison</a></li>
+						<li>
+							<ul class="main-nav nav navbar-nav" id="header_cat">
+						        <!-- cat_list -->
+							</ul>
+					    </li>
 						<li><a href="/contact">Contact</a></li>
 					</ul>
 					<!-- /NAV -->
