--- a/generateApp/client_app/views/layout/header.ejs
+++ b/generateApp/client_app/views/layout/header.ejs
@@ -41,8 +41,8 @@
 								<li><a href="https://maps.app.goo.gl/KbpANepKFsNSBQgf8" target="_blank"><i class="fa fa-map-marker"></i> Rue 20 aout commune bordj bahri </a></li>
 							</ul>
 							<ul class="header-links pull-right">
-								<li><a href="#"><i class="fa fa-sign-in"></i> S'inscrire</a></li>
-								<li><a href="#"><i class="fa fa-user-o"></i>  Mon Compte</a></li>
+								<li><a href="/signup"><i class="fa fa-sign-in"></i> S'inscrire</a></li>
+								<li><a href="/login"><i class="fa fa-user-o"></i> Mon Compte</a></li>
 							</ul>
 						</div>
 					</div>
