--- a/generateApp/admin_app/views/login.ejs
+++ b/generateApp/admin_app/views/login.ejs
@@ -60,8 +60,8 @@
                 <div class="row">
                   <div class="col-lg-6">
                     <div class="form-group">
-                      <label class="color-gray-500 font-xs" style="padding-bottom: 15px;">
-                        <input class="checkagree" type="checkbox" onclick="myFunction()">  Voir le mot de passe
+                      <label class="color-gray-500 font-xs" style="padding-bottom: 15px; color: #fff;">
+                        <input class="checkagree"  type="checkbox" onclick="myFunction()">  Voir le mot de passe
                       </label>
                     </div>
                   </div>
