--- a/generateApp/admin_app/views/orders_list.ejs
+++ b/generateApp/admin_app/views/orders_list.ejs
@@ -67,10 +67,10 @@
                                         </svg></button>
                                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="order-context-menu-0">
                                         <li><a class="dropdown-item" href="/order/<%= orders[i].order_id %>/details">Détails</a></li>
-                                        <!--<li>
+                                        <li>
                                             <hr class="dropdown-divider" />
                                         </li>
-                                        <li><a class="dropdown-item text-danger" href="#">Supprimer</a></li>-->
+                                        <li><a class="dropdown-item text-info" href="#">Imprimer</a></li>
                                     </ul>
                                 </div>
                             </td>
