--- a/generateApp/client_app/views/layout/footer.ejs
+++ b/generateApp/client_app/views/layout/footer.ejs
@@ -107,6 +107,22 @@
 	</div>
 </div>
 
+   <!-- Modal loading -->
+   <div class="modal fade" id="loading-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" data-backdrop = "static" data-keyboard="false">
+	<div class="modal-dialog" style="width: 200px;" role="document">
+	  <div class="modal-content">
+		<div class="modal-body d-flex justify-content-between align-items-center gap-3"> 
+			<div class="load-wrapp">
+				<p>En cours......</p>
+				<div class="load-10">
+				  <div class="bar"></div>
+				</div>
+			</div>
+		</div>
+	  </div>
+	</div>
+  </div>
+
 <!--MODAL ALERT-->
 <!-- <div class="modal fade" id="alert_modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 	<div class="modal-dialog modal-dialog-centered">
@@ -133,29 +149,6 @@
 <script src="/assets/js/nouislider.min.js"></script>
 <script src="/assets/js/jquery.zoom.min.js"></script>
 <script src="/assets/js/main.js"></script>
-
-
-   <!-- Modal loading -->
-   <div class="modal fade" id="loading-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" data-bs-backdrop = "static" data-bs-keyboard="false">
-	<div class="modal-dialog" style="width: 200px;" role="document">
-	  <div class="modal-content">
-		<div class="modal-body d-flex justify-content-between align-items-center gap-3"> 
-			<div class="load-wrapp">
-				<p>En cours......</p>
-				<div class="load-10">
-				  <div class="bar"></div>
-				</div>
-			</div>
-		</div>
-	  </div>
-	</div>
-  </div>
-
-
-</body>
-
-</html>
-
 
 
 <style>
@@ -217,3 +210,12 @@
 	}
 	
 </style>
+
+
+
+</body>
+
+</html>
+
+
+
