product add to cart

--- a/generateApp/client_app/views/home.ejs
+++ b/generateApp/client_app/views/home.ejs
@@ -242,7 +242,7 @@
 											<i class="fa fa-star"></i>
 										</div> -->
                                         <div class="product-btns">
-                                            <button class="add-to-wishlist" onclick="location.href='/checkout/<%= sub_category[i].products[j].product_id %>'"><i
+                                            <button class="add-to-wishlist productToCart_btn" idp = "<%= sub_category[i].products[j].product_id %>"><i
                                                     class="fa fa-shopping-cart"></i><span
                                                     class="tooltipp">Ajouter au panier</span></button>
                                             <!-- <button class="add-to-compare" onclick="location.href='/compare/<%= sub_category[i].products[j].product_id %>'"><i
