--- a/generateApp/client_app/views/product_details.ejs
+++ b/generateApp/client_app/views/product_details.ejs
@@ -113,6 +113,7 @@
 										<span class="qty-down">-</span>
 									</div>
 								</div> -->
+								<button class="add-to-cart-btn productToCart_btn" idp = "<%= product[0].product_id %>"><i class="fa fa-plus"></i>Ajouter au panier</button>
 								<button class="add-to-cart-btn" onclick="location.href='/checkout/<%= product[0].product_id %>'"><i class="fa fa-shopping-cart"></i> Commander</button>
 							</div>
 							<ul class="product-links">
