--- a/generateApp/client_app/views/products_list.ejs
+++ b/generateApp/client_app/views/products_list.ejs
@@ -161,7 +161,7 @@
 												<%= formating.format(products[i].product_price)+" DA" %>
 											</h4>
 												<div class="product-btns">
-													<button class="add-to-wishlist" onclick="location.href='/checkout/<%= products[i].product_id %>'"><i
+													<button class="add-to-wishlist productToCart_btn" idp = "<%= products[i].product_id %>"><i
 															class="fa fa-shopping-cart"></i><span
 															class="tooltipp">Ajouter au panier</span></button>
 													<!-- <button class="add-to-compare" onclick="location.href='/compare/<%= products[i].product_id %>'"><i
