--- a/generateApp/client_app/views/layout/footer.ejs
+++ b/generateApp/client_app/views/layout/footer.ejs
@@ -89,58 +89,10 @@
 
 
 
-<div class="modal fade" id="alert_modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
-	<div class="modal-dialog" role="document">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-					<span aria-hidden="true">&times;</span>
-				</button>
-			</div>
-			<div class="modal-body" id="alert_msg">
 
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-success" data-dismiss="modal">OK</button>
-			</div>
-		</div>
-	</div>
-</div>
+<%- include ("modal.ejs") %> 
 
-   <!-- Modal loading -->
-   <div class="modal fade" id="loading-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" data-backdrop = "static" data-keyboard="false">
-	<div class="modal-dialog" style="width: 200px;" role="document">
-	  <div class="modal-content">
-		<div class="modal-body d-flex justify-content-between align-items-center gap-3"> 
-			<div class="load-wrapp">
-				<p>En cours......</p>
-				<div class="load-10">
-				  <div class="bar"></div>
-				</div>
-			</div>
-		</div>
-	  </div>
-	</div>
-  </div>
 
-<!--MODAL ALERT-->
-<!-- <div class="modal fade" id="alert_modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-	<div class="modal-dialog modal-dialog-centered">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-			</div>
-			<div class="modal-body" id="alert_msg">
-
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-success" data-bs-dismiss="modal">Ok</button>
-			</div>
-		</div>
-	</div>
-</div> -->
-
-<script src="/lib/functions.js"></script>
 
 <!-- jQuery Plugins -->
 <script src="/assets/js/jquery.min.js"></script>
@@ -149,6 +101,9 @@
 <script src="/assets/js/nouislider.min.js"></script>
 <script src="/assets/js/jquery.zoom.min.js"></script>
 <script src="/assets/js/main.js"></script>
+
+
+<script src="/lib/functions.js"></script>
 
 
 <style>
