--- a/generateApp/client_app/views/orders.ejs
+++ b/generateApp/client_app/views/orders.ejs
@@ -10,55 +10,43 @@
                         <div class="panel-title" >
                             <div class="row">
                                 <div class="col-md-12">
-                                    <h3 style="color: #d3a04f;"><i class="fa fa-shopping-cart"></i> <span style="color: #fff;">Panier</span> </h3>
+                                    <h3 style="color: #d3a04f;"><i class="fa fa-shopping-cart"></i> <span style="color: #fff;">Mes Commandes</span> </h3>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="panel-body">
                         <div class="row">
-                            <div class="col-md-2 col-xs-12 text-center"><img class="img-responsive" src="/assets/img/product02.png" width="80">
-                            </div>
-                            <div class="col-md-4 col-xs-12">
-                                <h4 class="product-name"><strong>Product name</strong></h4><h4><small>Product description</small></h4>
-                            </div>
-                            <div class="col-md-6" style="display: flex; justify-content: space-between;">
-                                <div class="col-md-8 col-xs-8 text-right">
-                                    <h4><strong>2 500 <span class="text-muted">x</span></strong></h4>
-                                </div>
-                                <div class="col-md-2 col-xs-2">
-                                    <input type="number" class="form-control input-xs" value="1">
-                                </div>
-                                <div class="col-md-2 col-xs-2">
-                                    <button type="button" class="btn btn-link">
-                                        <i class="fa fa-trash"></i>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                        <hr>
-                        <div class="row">
-                            <div class="col-md-2 col-xs-6 text-center"><img class="img-responsive" src="/assets/img/product02.png" width="80">
-                            </div>
                             <div class="col-md-4 col-xs-6">
                                 <h4 class="product-name"><strong>Product name</strong></h4><h4><small>Product description</small></h4>
                             </div>
                             <div class="col-md-6 col-xs-12" style="display: flex; justify-content: space-between;">
                                 <div class="col-md-8 col-xs-8 text-right">
-                                    <h4><strong>2 500 <span class="text-muted">x</span></strong></h4>
+                                    <h4><strong>2 500 </strong></h4>
                                 </div>
-                                <div class="col-md-2 col-xs-2">
-                                    <input type="number" class="form-control input-xs" value="1">
+                                
+                                <div class="col-md-8 col-xs-8 text-right">
+                                    <h6 class="text-warning"><strong>En cour de validation</strong></h6>
                                 </div>
-                                <div class="col-md-2 col-xs-2">
-                                    <button type="button" class="btn btn-link">
-                                        <i class="fa fa-trash"></i>
-                                    </button>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="row">
+                            <div class="col-md-4 col-xs-6">
+                                <h4 class="product-name"><strong>Product name</strong></h4><h4><small>Product description</small></h4>
+                            </div>
+                            <div class="col-md-6 col-xs-12" style="display: flex; justify-content: space-between;">
+                                <div class="col-md-8 col-xs-8 text-right">
+                                    <h4><strong>2 500 </strong></h4>
+                                </div>
+                                
+                                <div class="col-md-8 col-xs-8 text-right">
+                                    <h6 class="text-warning"><strong>En cour de validation</strong></h6>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="panel-footer">
+                    <!-- <div class="panel-footer">
                         <div class="row text-center">
                             <div class="col-md-9">
                                 <h4 class="text-right">Total : <strong>5 000.00</strong></h4>
@@ -69,7 +57,7 @@
                                 </button>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
