--- a/generateApp/client_app/views/layout/header.ejs
+++ b/generateApp/client_app/views/layout/header.ejs
@@ -6,7 +6,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-		<title>iphoneprixalgerie.com</title>
+		<title>Literie d'amour</title>
+
+		<link rel="shortcut icon" type="image/x-icon" href="/assets/img/icon.png">
 
 		<!-- Google font -->
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
@@ -35,7 +37,7 @@
 					<!-- TOP HEADER -->
 					<div id="top-header">
 						<div class="container-fluid">
-							<ul class="header-links pull-left">
+							<ul class="header-links pull-left mobile-none">
 								<li><a href="tel:+213561446414"><i class="fa fa-phone"></i> 0561446414</a></li>
 								<li><a href="mailto:contact@literiedamour.dz"><i class="fa fa-envelope-o"></i> contact@literiedamour.dz</a></li>
 								<li><a href="https://maps.app.goo.gl/KbpANepKFsNSBQgf8" target="_blank"><i class="fa fa-map-marker"></i> Rue 20 aout commune bordj bahri </a></li>
