--- a/generateApp/client_app/views/layout/modal.ejs
+++ b/generateApp/client_app/views/layout/modal.ejs
@@ -23,7 +23,7 @@
           <p style="width: 100%; text-align: center; margin: 10px 0px; color: white;">Un nouveau produit a été ajouté à votre panier.</p>
         </div>
         <div class="modal-footer">
-          <button class="btn btn-light" >Voir panier</button>
+          <button class="btn btn-light" onclick="location.href='/cart'" >Voir panier</button>
           <button type="button" class="btn btn-warning mb-2" data-dismiss="modal">Continuer vos achats &nbsp;<i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
         </div>
       </div>
