--- a/generateApp/client_app/views/layout/header.ejs
+++ b/generateApp/client_app/views/layout/header.ejs
@@ -109,7 +109,7 @@
 										<div class="dropdown">
 											<a class="dropdown-toggle" href="" data-toggle="dropdown" aria-expanded="true">
 												<i class="fa fa-shopping-cart"></i>
-												<span>Your Cart</span>
+												<span>Votre panier</span>
 												<div class="qty">3</div>
 											</a>
 											<div class="cart-dropdown">
@@ -141,7 +141,7 @@
 													<h5>SUBTOTAL: $2940.00</h5>
 												</div>
 												<div class="cart-btns">
-													<a href="#">View Cart</a>
+													<a href="/cart">Voir panier</a>
 													<a href="#">Checkout  <i class="fa fa-arrow-circle-right"></i></a>
 												</div>
 											</div>
