--- a/generateApp/client_app/views/products_list.ejs
+++ b/generateApp/client_app/views/products_list.ejs
@@ -31,11 +31,29 @@
 						<div class="aside">
 							<h3 class="aside-title">Categories</h3>
 							<div class="checkbox-filter" id="cat-choice">
+								<% if (typeof(category) !== 'undefined' && category != null && category.length > 0) { %>
+									<% for (var i = 0; i < category.length; i++) { %>
+										<div class="input-checkbox">
+											<input type="checkbox" id="category-<%= category[i].cat_id %>" value="<%= category[i].cat_id %>">
+											<label for="category-<%= category[i].cat_id %>">
+												<span></span>
+												<%= category[i].cat_name  %>
+												<small>(<%= category[i].product_count %>)</small>
+											</label>
+										</div>
+								<% }} %>
+							</div>
+						</div>
+						<!-- /aside Widget -->
+						<!-- aside Widget -->
+						<div class="aside">
+							<h3 class="aside-title">Sous-categories</h3>
+							<div class="checkbox-filter" id="subCat-choice">
 								<% if (typeof(sub_category) !== 'undefined' && sub_category != null && sub_category.length > 0) { %>
 								<% for (var i = 0; i < sub_category.length; i++) { %>
 									<div class="input-checkbox">
-										<input type="checkbox" id="category-<%= sub_category[i].sub_cat_id %>" value="<%= sub_category[i].sub_cat_id %>">
-										<label for="category-<%= sub_category[i].sub_cat_id %>">
+										<input type="checkbox" id="sub-category-<%= sub_category[i].sub_cat_id %>" value="<%= sub_category[i].sub_cat_id %>">
+										<label for="sub-category-<%= sub_category[i].sub_cat_id %>">
 											<span></span>
 											<%= sub_category[i].sub_cat_name  %>
 											<small>(<%= sub_category[i].product_count %>)</small>
@@ -153,7 +171,7 @@
 										</div>
 										<div class="product-body">
 											<p class="product-category"><%= products[i].sub_cat_name %></p>
-											<a href="#"><p class="product-marque"><%= products[i].brand_name %></p></a> 
+											<a href="#"><p class="product-marque"><%= products[i].brand_name %></p></a>
 											<h3 class="product-name max-lines"><a href="/product/<%= products[i].product_id %>/details"><%= products[i].product_name %></a>
 											</h3>
 											<h4 class="product-price">
@@ -192,5 +210,5 @@
 		<!-- /SECTION -->
 
 		<script src="/lib/multi_filter.js"></script>
-		
+
 		<%- include ("layout/footer") %>
