--- a/generateApp/client_app/views/cart.ejs
+++ b/generateApp/client_app/views/cart.ejs
@@ -5,6 +5,11 @@
     <div class="container">
         <div class="row">
             <% if (typeof(cart) !== 'undefined' && cart.length > 0) { %>
+         
+                <% if (typeof(err) != "undefined" && err != null && err == 0) { %>
+                <div class="alert alert-success ms-4 me-4" role="alert">Votre panier a bien été validé.</div>
+                <% } %>
+
             <div class="col-md-12">
                 <div class="panel panel-info">
                     <div class="panel-heading" style="background-color: #223f3a;">
@@ -46,7 +51,7 @@
                         <hr>
                         <% }} else { %>
 
-                            <div class="alert alert-info mt-5" role="alert">
+                            <div class="text-info">
                                 
                                 Votre panier est vide.
                             
@@ -66,7 +71,7 @@
                                     </strong></h4>
                                 </div>
                                 <div class="col-md-3">
-                                    <button type="button" class="btn btn-success btn-block">
+                                    <button type="button" class="btn btn-success btn-block myBtnValid">
                                         Valider
                                     </button>
                                 </div>
