--- a/generateApp/client_app/views/layout/modal.ejs
+++ b/generateApp/client_app/views/layout/modal.ejs
@@ -15,24 +15,24 @@
   </div>
   
   
-  <div class="modal fade" id="cart_modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content" style="background-color: #1d3a35;">
-        <div class="modal-body">
-          <img alt="Ecom" src="/assets/img/logo.png" width="100">
-          <p style="width: 100%; text-align: center; margin: 10px 0px; color: white;">Un nouveau produit a été ajouté à votre panier.</p>
-        </div>
-        <div class="modal-footer">
-          <button class="btn btn-light" onclick="location.href='/cart'" >Voir panier</button>
-          <button type="button" class="btn btn-warning mb-2" data-dismiss="modal">Continuer vos achats &nbsp;<i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
-        </div>
+<div class="modal fade" id="cart_modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content" style="background-color: #1d3a35;">
+      <div class="modal-body">
+        <img alt="Ecom" src="/assets/img/logo.png" width="100">
+        <p style="width: 100%; text-align: center; margin: 10px 0px; color: white;">Un nouveau produit a été ajouté à votre panier.</p>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-light" onclick="location.href='/cart'" >Voir panier</button>
+        <button type="button" class="btn btn-warning mb-2" data-dismiss="modal">Continuer vos achats &nbsp;<i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
       </div>
     </div>
   </div>
+</div>
 
 
 
-<div class="modal fade" id="alert_modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+<!-- <div class="modal fade" id="alert_modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
 <div class="modal-dialog" role="document">
     <div class="modal-content">
         <div class="modal-header">
@@ -48,4 +48,32 @@
         </div>
     </div>
 </div>
+</div> -->
+
+
+
+<div class="modal fade" id="alert_modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="card-header" style="background-color: #1d3a35; padding: 15px;">
+        <img alt="Ecom" src="/assets/img/logo.png" width="100">
+      </div>
+      <div class="modal-body" id="alert_msg">
+
+      </div>
+      <div class="modal-footer" style="background-color: #1d3a35;">
+        <button type="button" class="btn btn-light mb-2" data-dismiss="modal">Ok</button>
+      </div>
+    </div>
+  </div>
 </div>
+
+
+
+
+
+
+
+
+
+<style>#alert_msg .alert{margin: 0;}</style>
