--- a/generateApp/client_app/views/orders.ejs
+++ b/generateApp/client_app/views/orders.ejs
@@ -16,35 +16,36 @@
                         </div>
                     </div>
                     <div class="panel-body">
+                        <% if (typeof(orders) !== 'undefined' && orders.length > 0) { %>
+                        <% for (var i = 0; i < orders.length; i++) { %>
                         <div class="row">
                             <div class="col-md-4 col-xs-6">
-                                <h4 class="product-name"><strong>Product name</strong></h4><h4><small>Product description</small></h4>
+                                <h4 class="product-name"><a href="#"><strong><%= orders[i].order_date.toLocaleDateString() %></strong></a></h4><h4><small><%= orders[i].products_count + " Produits" %></small></h4>
                             </div>
                             <div class="col-md-6 col-xs-12" style="display: flex; justify-content: space-between;">
                                 <div class="col-md-8 col-xs-8 text-right">
-                                    <h4><strong>2 500 </strong></h4>
+                                    <h4><strong> 
+                                        <% let formating=Intl.NumberFormat('en-US') %>
+                                        <%= formating.format(orders[i].order_total_price+orders[i].delivery_price)+" DA" %>
+                                    </strong></h4>
                                 </div>
                                 
                                 <div class="col-md-8 col-xs-8 text-right">
-                                    <h6 class="text-warning"><strong>En cour de validation</strong></h6>
+                                    <% if (orders[i].stat_id == 1) { %>
+                                        <h6 class="text-warning"><strong><%= orders[i].stat_name %></strong></h6>
+                                    <% } else if (orders[i].stat_id == 2) { %>
+                                        <h6 class="text-danger"><strong><%= orders[i].stat_name %></strong></h6>
+                                    <% } else if (orders[i].stat_id == 3) { %>
+                                        <h6 class="text-info"><strong><%= orders[i].stat_name %></strong></h6>
+                                    <% } else if (orders[i].stat_id == 4) { %>
+                                        <h6 class="text-success"><strong><%= orders[i].stat_name %></strong></h6>
+                                    <% } %>
+                                    
                                 </div>
                             </div>
                         </div>
                         <hr>
-                        <div class="row">
-                            <div class="col-md-4 col-xs-6">
-                                <h4 class="product-name"><strong>Product name</strong></h4><h4><small>Product description</small></h4>
-                            </div>
-                            <div class="col-md-6 col-xs-12" style="display: flex; justify-content: space-between;">
-                                <div class="col-md-8 col-xs-8 text-right">
-                                    <h4><strong>2 500 </strong></h4>
-                                </div>
-                                
-                                <div class="col-md-8 col-xs-8 text-right">
-                                    <h6 class="text-warning"><strong>En cour de validation</strong></h6>
-                                </div>
-                            </div>
-                        </div>
+                        <% }} %>
                     </div>
                     <!-- <div class="panel-footer">
                         <div class="row text-center">
