--- a/generateApp/client_app/views/layout/modal.ejs
+++ b/generateApp/client_app/views/layout/modal.ejs
@@ -24,7 +24,7 @@
       </div>
       <div class="modal-footer">
         <button class="btn btn-light" onclick="location.href='/cart'" >Voir panier</button>
-        <button type="button" class="btn btn-warning mb-2" data-dismiss="modal">Continuer vos achats &nbsp;<i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
+        <button type="button" class="btn btn-warning mb-2" data-dismiss="modal">Continuer mes achats &nbsp;<i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
       </div>
     </div>
   </div>
