--- a/generateApp/client_app/views/home.ejs
+++ b/generateApp/client_app/views/home.ejs
@@ -94,7 +94,7 @@
 													<i class="fa fa-star"></i>
 												</div>
 												<div class="product-btns">
-													<button class="add-to-wishlist productToCart_btn" idp = "<%= product_top[i].product_id %>"><i class="fa fa-heart-o"></i><span class="tooltipp">Ajouter au panier</span></button>
+													<button class="add-to-wishlist productToCart_btn" idp = "<%= product_top[i].product_id %>"><i class="fa fa-shopping-cart"></i><span class="tooltipp">Ajouter au panier</span></button>
 													<!-- <button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">add to compare</span></button> -->
 													<button class="quick-view" onclick="location.href='/product/<%= product_top[i].product_id %>/details'"><i class="fa fa-eye"></i><span class="tooltipp">Détail</span></button>
 												</div>
