--- a/generateApp/client_app/views/layout/header.ejs
+++ b/generateApp/client_app/views/layout/header.ejs
@@ -110,39 +110,18 @@
 											<a class="dropdown-toggle" href="" data-toggle="dropdown" aria-expanded="true">
 												<i class="fa fa-shopping-cart"></i>
 												<span>Votre panier</span>
-												<div class="qty">3</div>
+												<div class="qty" id="qteCart_drop"></div>
 											</a>
 											<div class="cart-dropdown">
-												<div class="cart-list">
-													<div class="product-widget">
-														<div class="product-img">
-															<img src="./img/product01.png" alt="">
-														</div>
-														<div class="product-body">
-															<h3 class="product-name"><a href="#">product name goes here</a></h3>
-															<h4 class="product-price"><span class="qty">1x</span>$980.00</h4>
-														</div>
-														<button class="delete"><i class="fa fa-close"></i></button>
-													</div>
-		
-													<div class="product-widget">
-														<div class="product-img">
-															<img src="./img/product02.png" alt="">
-														</div>
-														<div class="product-body">
-															<h3 class="product-name"><a href="#">product name goes here</a></h3>
-															<h4 class="product-price"><span class="qty">3x</span>$980.00</h4>
-														</div>
-														<button class="delete"><i class="fa fa-close"></i></button>
-													</div>
+												<div class="cart-list" id="productCart_drop">
+													
 												</div>
 												<div class="cart-summary">
-													<small>3 Item(s) selected</small>
-													<h5>SUBTOTAL: $2940.00</h5>
+													<h5 id="totalCart_drop"></h5>
 												</div>
 												<div class="cart-btns">
 													<a href="/cart">Voir panier</a>
-													<a href="#">Checkout  <i class="fa fa-arrow-circle-right"></i></a>
+													<a href="" class="myBtnValid_drop">Valider  <i class="fa fa-arrow-circle-right"></i></a>
 												</div>
 											</div>
 										</div>
