add dropdown cart

--- a/generateApp/client_app/views/layout/header.ejs
+++ b/generateApp/client_app/views/layout/header.ejs
@@ -99,7 +99,7 @@
 											</a>
 											<ul class="dropdown-menu" aria-labelledby="dropdownMenu">
 												<li><a href="/account">Mon compte</a></li>
-												<li><a href="/orders/list">Mes commandes</a></li>												
+												<li><a href="/orders">Mes commandes</a></li>												
 												<li role="separator" class="divider"></li>
 												<li><a href="/logout">Déconnecter</a></li>
 											</ul>
@@ -121,7 +121,7 @@
 												</div>
 												<div class="cart-btns">
 													<a href="/cart">Voir panier</a>
-													<a href="" class="myBtnValid_drop">Valider  <i class="fa fa-arrow-circle-right"></i></a>
+													<a style="cursor: pointer;" class="myBtnValid_drop">Valider  <i class="fa fa-arrow-circle-right"></i></a>
 												</div>
 											</div>
 										</div>
