--- a/generateApp/admin_app/views/layouts/nav.ejs
+++ b/generateApp/admin_app/views/layouts/nav.ejs
@@ -20,7 +20,7 @@
                   </a>
                 </li>
                 <li class="sa-nav__menu-item sa-nav__menu-item--has-icon">
-                  <a href="/products/list" class="sa-nav__link">
+                  <a href="/stock" class="sa-nav__link">
                   <span class="sa-nav__icon">
                     <i class="fas fa-warehouse"></i>
                   </span>
