--- a/generateApp/admin_app/views/stats.ejs
+++ b/generateApp/admin_app/views/stats.ejs
@@ -26,9 +26,8 @@
                         <thead>
                             <tr>                 
                                 <th class="min-w-20x">Produits</th>
-                                <th>Prix de vente</th>
                                 <th>Qte Vendu</th>
-                                <th>Encaissement</th>                                                        
+                                <th>Encaissement Total</th>                                                        
                             </tr>
                         </thead>
                         <tbody>
@@ -40,13 +39,22 @@
                               
                               %>
                             <tr>
-                                <td><%= product[i].product_name %></td>
                                 <td>
-                                    <% let formating=Intl.NumberFormat('en-US') %>
-                                    <%= formating.format(product[i].product_price_o)+" DA" %>
+                                    <div class="d-flex align-items-center"><a href="/product/<%= product[i].product_id %>/details" class="me-4">
+                                            <div class="sa-symbol sa-symbol--shape--rounded sa-symbol--size--lg">
+                                                <img src="/img/product/<%= product[i].product_id %>/main.jpg" width="40" height="40"
+                                                    alt="" />
+                                            </div>
+                                        </a>
+                                        <div><a href="/product/<%= product[i].product_id %>/details" class="text-reset"><%= product[i].product_name %></a>
+                                            <div class="sa-meta mt-0">
+                                            </div>
+                                        </div>
+                                    </div>
                                 </td>
                                 <td><%= product[i].product_qt %></td>
                                 <td>
+                                    <% let formating=Intl.NumberFormat('en-US') %>
                                     <%= formating.format(product[i].product_price)+" DA" %>
                                 </td>
                             </tr>
