add img banner & video

--- a/generateApp/admin_app/views/layouts/nav.ejs
+++ b/generateApp/admin_app/views/layouts/nav.ejs
@@ -74,6 +74,14 @@
                   <span class="sa-nav__title">Statistique</span>
                   </a>
                 </li>
+                <li class="sa-nav__menu-item sa-nav__menu-item--has-icon">
+                  <a href="/home/page/edit" class="sa-nav__link">
+                    <span class="sa-nav__icon">
+                      <i class="fas fa-square"></i>
+                    </span>
+                  <span class="sa-nav__title">Configuration page</span>
+                  </a>
+                </li>
 
         </ul>
       </li>
