--- a/generateApp/admin_app/views/login.ejs
+++ b/generateApp/admin_app/views/login.ejs
@@ -40,9 +40,9 @@
 
                 <h1 class="mb-0 fs-3 text-white">S'identifier</h1>
                 <div class="fs-exact-14 mt-2 pt-1 mb-5 pb-2 text-white">Connectez-vous à  votre compte pour continuer.</div>
-                <div class="mb-4"><label class="form-label">Utilisateur</label><input type="text" name="singin_username" required
+                <div class="mb-4"><label class="form-label text-white">Utilisateur</label><input type="text" name="singin_username" required
                         class="form-control form-control-lg" /></div>
-                <div class="mb-4"><label class="form-label">Mot de passe</label><input type="password" name="singin_password" id="myInput" required
+                <div class="mb-4"><label class="form-label text-white">Mot de passe</label><input type="password" name="singin_password" id="myInput" required
                         class="form-control form-control-lg" /></div>
                 <% if (typeof(err) !== 'undefined' && err != null) { 
                   
