add img banner & video

--- a/generateApp/client_app/views/home.ejs
+++ b/generateApp/client_app/views/home.ejs
@@ -34,7 +34,7 @@
 									</div>
 								</li>
 							</ul> -->
-							<h2 class="text-uppercase" style="  color: #d3a04f; margin-bottom: 5%;">Découvre notre gamme de produits</h2>
+							<h2 class="text-uppercase" style="  color: #d3a04f; margin-bottom: 5%;"><%= !(banner.text) ? '' : banner.text %></h2>
 
 							<a class="primary-btn cta-btn" href="/products/list/1">Voir Plus</a>
 						</div>
