--- a/generateApp/admin_app/views/home_page_edit.ejs
+++ b/generateApp/admin_app/views/home_page_edit.ejs
@@ -39,7 +39,7 @@
                                     </td>
                                     <td><input type="file" accept="image/*" class="form-control form-control-sm" id="formFile-2-sm" name="main" /></td>
                                     <td><input type="text" name="textBanner" 
-                                     value="<%= banner.text %> "  
+                                     value="<%= !(banner.text) ? '' : banner.text %>"  
                                     class="form-control form-control-lg"/></td>                               
                                 </tr>
                             </tbody>
