--- a/generateApp/client_app/views/home.ejs
+++ b/generateApp/client_app/views/home.ejs
@@ -74,7 +74,7 @@
 										<!-- product -->
 										<div class="product">
 											<div class="product-img">
-												<img src="/img/product/<%= product_top[i].product_id %>/main.jpg" alt="">
+												<img src="/img/product/<%= product_top[i].product_id %>/main.jpg" alt="" style="max-height: 280px;">
 												<div class="product-label">
 												<!-- 	<span class="sale">-30%</span> -->
 													<span class="new">NEW</span>
@@ -86,13 +86,13 @@
 												<h4 class="product-price">
 													<% let formating=Intl.NumberFormat('en-US') %>
 													<%= formating.format(product_top[i].product_price)+" DA" %></h4>
-												<div class="product-rating">
+												<!-- <div class="product-rating">
 													<i class="fa fa-star"></i>
 													<i class="fa fa-star"></i>
 													<i class="fa fa-star"></i>
 													<i class="fa fa-star"></i>
 													<i class="fa fa-star"></i>
-												</div>
+												</div> -->
 												<div class="product-btns">
 													<button class="add-to-wishlist productToCart_btn" idp = "<%= product_top[i].product_id %>"><i class="fa fa-shopping-cart"></i><span class="tooltipp">Ajouter au panier</span></button>
 													<!-- <button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">add to compare</span></button> -->
@@ -160,11 +160,11 @@
                                         <% for (var j = 0; j < sub_category[i].products.length; j++) { %>
 
                                             <!-- product -->
-							<div class="col-md-2 col-xs-6">
+							<div class="col-md-2 col-xs-6 col-2 col-lg-2">
 								<div class="product">
 									<div class="product-img text-center" >
 										<img src="/img/product/<%= sub_category[i].products[j].product_id %>/main.jpg" alt=""
-                                        style="width: 250px; height: 250px; padding: 10px;">
+                                        style=" min-height: 250px; padding: 5px;">
 										<!-- <div class="product-label">
 											<span class="sale">-30%</span>
 											<span class="new">NEW</span>
