--- a/generateApp/admin_app/views/orders_list.ejs
+++ b/generateApp/admin_app/views/orders_list.ejs
@@ -70,7 +70,7 @@
                                         <li>
                                             <hr class="dropdown-divider" />
                                         </li>
-                                        <li><a class="dropdown-item text-info" href="#">Imprimer</a></li>
+                                        <li><a class="dropdown-item text-info" href="/invoice">Imprimer</a></li>
                                     </ul>
                                 </div>
                             </td>
