--- a/generateApp/admin_app/views/stock.ejs
+++ b/generateApp/admin_app/views/stock.ejs
@@ -31,8 +31,8 @@
                         <div class="alert alert-success ms-4 me-4" role="alert">Succées.</div>
                     <% } %>    
                     <div class="sa-divider"></div>
-                    <table class="sa-datatables-init" data-order="[[ 1, &quot;asc&quot; ]]"
-                        data-sa-search-input="#table-search">
+                    <table class="sa-datatables-init" data-order="[[ 3, &quot;deasc&quot; ]]"
+                        data-sa-search-input="#table-search" id="example">
                         <thead>
                             <tr>
                                 <th class="min-w-20x">Produits</th>
@@ -108,6 +108,8 @@
         </div>
     </div>
 </div><!-- sa-app__body / end --><!-- sa-app__footer -->
+
+
 <%- include ("layouts/footer.ejs") %>
 
 
