--- a/generateApp/admin_app/views/order_details.ejs
+++ b/generateApp/admin_app/views/order_details.ejs
@@ -10,6 +10,7 @@
                     </div>
                     
                     <div class="col-auto d-flex">
+                        <a href="/invoice" class="btn btn-secondary me-3">Imprimer</a>
                         <a href="/orders/list" class="btn btn-warning me-3">Retour</a>
                         <% if (order[0].stat_id == 1) { %>
                         <a href="/order/<%= order[0].order_id %>/status/2" class="btn btn-danger me-3">Annuler</a>
@@ -48,7 +49,7 @@
                 data-sa-container-query="{&quot;920&quot;:&quot;sa-entity-layout--size--md&quot;}">
                 <div class="sa-entity-layout__body">
                     <div class="sa-entity-layout__main">
-                        <div class="card mt-5">
+                        <div class="card">
                             <div class="card-body px-5 py-4 d-flex align-items-center justify-content-between">
                                 <h2 class="mb-0 fs-exact-18 me-4">Produits</h2>
                             </div>
